# nulang

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BEAM_PRIMITIVES.md  CHANGELOG.md  Cargo.toml  DESIGN_AI_SDK.md  DESIGN_CLOUD.md  DESIGN_PACKAGE_MANAGER.md  DESIGN_WEB_FRAMEWORK.md  DESIGN_WORKFLOW_SDK.md  GOVERNANCE.md  NOTICE  PERFORMANCE_ANALYSIS.md  PUSH_INSTRUCTIONS.md  PUSH_v0.7.md  README.md  README2.md  REVIEW_COMPILER.md  REVIEW_DIAGRAMS.md  REVIEW_IDE.md  REVIEW_ROADMAP.md  SPEC.md  SPEC2.md  STRATEGY.md  build.rs  codebase_analysis_report.md  test_auth.md  test_file_path.md  verify_implementation.py  verify_report.py
.agents/: ORIGINAL_REQUEST.md
.agents/explorer_arch_spec_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_performance_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_quality_tests_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  PROJECT.md  handoff.md  plan.md  progress.md
.agents/reviewer_1/: BRIEFING.md  ORIGINAL_REQUEST.md  challenge_report.md  handoff.md  progress.md  review_report.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/victory_auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_report_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs-sync.yml
RFC/: 0000-template.md  0001-format-stability.md  0002-frozen-core.md  0003-remaining-roadmap.md  0004-deprecate-agent-workflow-database.md  0005-durable-entities.md  0006-temporal-effects.md  0007-event-sourcing-primitives.md  0008-migration-contracts.md  0009-organization-primitives.md
bootstrap/: README.md  compiler_core.nula  host.nula  self_test.nula  verify.sh
conformance/: README.md  run.py
conformance/behavior/: actor_spawn.json  actor_spawn.nula  bool.nula  core_math.json  core_math.nula  effect_handler.nula  error_syntax.json  error_syntax.nula  error_type.nula  error_undefined.json  error_undefined.nula  fib.json  fib.nula  lambda.json  lambda.nula  let_bind.json  let_bind.nula  match_wildcard.nula  parse_error.nula  record.json  record.nula  string.json  string.nula  variant.json  variant.nula
conformance/grammar/: README.md  negative_core.nula  positive_core.nula
crates/wit/: nulang-actor.wit
docs/: PRD.md  api.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  wrangler.toml
docs/archive/: DESIGN_AI_SDK.md  DESIGN_WORKFLOW_SDK.md  REVIEW_EXECUTIVE.md  REVIEW_RUNTIME.md  ROADMAP.md  STRATEGY.md  codebase_analysis_report.md
docs/src/components/: CodeBlock.astro  Footer.astro  Header.astro
docs/src/components/animations/: AIPipeline.astro  DistributionDemo.astro  GcDemo.astro  HeroBackground.astro  SupervisionTree.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/actors/: distribution.md  overview.md  supervision.md
docs/src/content/docs/ai/: memory.md  multi-agent.md  overview.md
docs/src/content/docs/getting-started/: installation.md  quick-start.md
docs/src/content/docs/language/: effects.md  syntax.md  types.md
docs/src/content/docs/stdlib/: actor.md  int.md  io.md  llm.md  otp.md  overview.md  signal.md  timer.md
docs/src/content/docs/workflows/: overview.md  signals-timers.md
docs/src/styles/: custom.css
examples/: counter_actor.nu  counter_actor.nula  effects.nu  effects.nula  ffi_example.c  fibonacci.nu  fibonacci.nula  link_monitor.nula  pipeline.nu  pipeline.nula  receive.nu  receive.nula  tcp_connection.nula  variant_option.nu  variant_option.nula  worker_pool.nula
scripts/: generate-docs.js
spec/: grammar.ebnf
spec/formal/: README.md  capabilities.lean  combined.lean  effects.lean  lakefile.lean  types.lean
src/: ast.rs  bytecode.rs  capabilities.rs  compiler.rs  cranelift_utils.rs  docgen.rs  effect_checker.rs  effects.rs  escape_analysis.rs  hir.rs  hir_lower.rs  integration_tests.rs  lexer.rs  lib.rs  main.rs  mir.rs  mir_codegen.rs  mir_lower.rs  mir_wasm.rs  parser.rs  repl.rs  stdlib.rs  stress_tests.rs  type_ir.rs  type_metadata.rs  typechecker.rs  types.rs  value_layout.rs  vm.rs  wasm_component_runtime.rs  wasm_runtime.rs  wasm_types.rs
src/ai/: client.rs  client_stub.rs  debate.rs  memory.rs  mock.rs  mock_stub.rs  mod.rs  pipeline.rs  procedural_memory.rs  providers_stub.rs  request.rs  response.rs  schema.rs  semantic_memory.rs  supervisor.rs  usage.rs
src/ai/providers/: mod.rs  ollama.rs  openai.rs
src/aot/: codegen.rs  mod.rs
src/backends/: mod.rs
src/ffi/: c_api.rs  marshal.rs  mod.rs  native.rs
src/format/: constants.rs  migrate.rs  mod.rs  nbc.rs
src/integration_tests/: mod.rs
src/jit/: compiler.rs  helpers.rs  mod.rs  runtime.rs  simd_analyzer.rs  simd_compiler.rs  tests.rs  typed_compiler.rs
src/lsp/: mod.rs
src/package/: commands.rs  lockfile.rs  manifest.rs  mod.rs  resolver.rs
src/python/: bridge.rs  marshal.rs  mod.rs  native_actor.rs
src/runtime/: actor.rs  agent.rs  ai_registry.rs  cluster.rs  crdt.rs  crdt_manager.rs  crdt_reg.rs  distributed.rs  distributed_context.rs  distribution.rs  dual_heap.rs  exit.rs  gc.rs  heap.rs  heap_serialize.rs  identity.rs  llm.rs  mailbox.rs  mod.rs  network.rs  orca_cycle.rs  persistence.rs  process_groups.rs  quic_transport.rs  registry.rs  scheduler.rs  spawn.rs  supervisor.rs  supervisor_registry.rs  tests.rs  timer.rs  workflow.rs
wit/: actor.wit
