[package]
name = "nulang"
version = "0.13.0-alpha.1"
edition = "2021"
authors = ["David Porkka"]
license = "Apache-2.0"
description = "Nulang - Distributed Actor-Based Programming Language with AI Agent Support"

[features]
# All optional subsystems are on by default so `cargo build`/`cargo test`
# behave exactly as before this feature set was introduced. Build with
# `--no-default-features --features <subset>` for a leaner binary, e.g.
# `cargo build --no-default-features --features sqlite` skips PyO3 and the
# LSP server entirely.
default = ["python", "sqlite", "lsp"]
# Python interop (native-actor `perform Python.call(...)`). Fully isolated
# to src/python/ — nothing else in the crate depends on it.
python = ["dep:pyo3"]
# SQLite-backed actor persistence (SqliteStore). MemoryStore and
# JsonFileStore remain available without this feature.
sqlite = ["dep:rusqlite"]
# Language Server Protocol support (`nulang --lsp`).
lsp = ["dep:tower-lsp"]

[dependencies]
# Memory & concurrency
mimalloc = "0.1"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cranelift JIT backend
cranelift = "0.132"
cranelift-jit = "0.132"
cranelift-module = "0.132"
cranelift-native = "0.132"
cranelift-frontend = "0.132"

# LSP server (optional, see [features])
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"] }

# HTTP client for AI provider integrations
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Python interop (optional, see [features])
pyo3 = { version = "0.29", features = ["auto-initialize", "py-clone"], optional = true }

# SQLite persistence backend (optional, see [features])
rusqlite = { version = "0.40", features = ["bundled"], optional = true }

# Native library loading
libloading = "0.8"

[lib]
name = "nulang"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "nulang"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
lto = false
codegen-units = 16

