[package]
name = "nulang"
version = "0.13.0-alpha.1"
edition = "2021"
authors = ["David Porkka"]
license = "Apache-2.0"
description = "Nulang - Distributed Actor-Based Programming Language with AI Agent Support"

[package.metadata]
# The Nulang *language* version, distinct from the crate `version` above.
# The crate version may rev freely; this moves only on RFC-ratified change to
# Frozen or Stable surfaces (see GOVERNANCE.md and CHANGELOG.md). Recorded in
# every `.nbc` artifact as the `language_version` header field; a runtime
# rejects an artifact whose language version exceeds its own. The runtime
# truth is the `LANGUAGE_VERSION` const in src/format/constants.rs; this field
# is the human-readable mirror.
language-version = "1.0.0-frozen"

[features]
# All optional subsystems are on by default so `cargo build`/`cargo test`
# behave exactly as before this feature set was introduced. Build with
# `--no-default-features --features <subset>` for a leaner binary, e.g.
# `cargo build --no-default-features --features sqlite` skips PyO3 and the
# LSP server entirely.
default = ["python", "sqlite", "lsp"]
# Python interop (native-actor `perform Python.call(...)`). Fully isolated
# to src/python/ — nothing else in the crate depends on it.
python = ["dep:pyo3"]
# libSQL-backed persistence (LibsqlStore). MemoryStore and
# JsonFileStore remain available without this feature.
sqlite = ["dep:libsql"]
lsp = ["dep:tower-lsp"]
wasm-backend = ["dep:wasm-encoder", "dep:wasmtime"]
wit-bindgen = []

[dependencies]
# Memory & concurrency
mimalloc = "0.1"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Manifest/lockfile parsing for the `nula` package manager
toml = "1"

# REPL line editing, history, and completion
rustyline = { version = "15", default-features = false, features = ["with-file-history"] }

# Cranelift JIT backend
cranelift = "0.132"
cranelift-jit = "0.132"
cranelift-module = "0.132"
cranelift-native = "0.132"
cranelift-frontend = "0.132"

# LSP server (optional, see [features])
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.37.0", features = ["full", "macros", "net", "rt-multi-thread", "time"] }

# HTTP client for AI provider integrations
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Python interop (optional, see [features])
pyo3 = { version = "0.29", features = ["auto-initialize", "py-clone"], optional = true }
# libSQL persistence backend (LibsqlStore + remote Turso support)
libsql = { version = "0.10.0-pre.4", optional = true }
# Native library loading
libloading = "0.8"
# WASM binary encoding (optional, see [features])
wasm-encoder = { version = "0.220", optional = true }
# WASM runtime using Wasmtime (optional, see [features])
wasmtime = { version = "46", optional = true, default-features = false, features = ["cranelift", "runtime", "std", "anyhow", "component-model"] }
blake3 = "1.8"
quinn = "0.10.2"
rustls = { version = "0.21.12", features = ["quic", "dangerous_configuration"] }
rcgen = "0.11.3"
multihash = "0.19.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }

[lib]
name = "nulang"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "nulang"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
lto = false
codegen-units = 16

